--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.38.0",
     "@auth/nextjs": "^0.0.0-380f8d56",
+    "date-fns": "^4.1.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
